dev_ws/log/build_2020-11-18_15-48-16/tallest_buildings/stderr.log
  File "H:\MyProgram\C and C++\ROS\dev_ws\install\Lib\site-packages\tallest_buildings\client.py", line 40
    break
    ^
SyntaxError: invalid syntax

